# test-tasks

./: .gitignore  CMake.gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake  zmq_app
Client-server/: CMakeLists.txt  clear.sh
Client-server/Source/: application.cpp
Includes/: command.pb.cc  command.pb.h  zmq_cmd.hpp
PB_tests/: CMakeLists.txt  Game.pb.cc  Game.pb.h  main
PB_tests/src/: Main.cpp
Release/: zmq_app
SC TTM/Source/: application.cpp
SC TTM/scripts/: clear.sh
Source/: application.cpp
Source/proto/: build.sh  command.proto
client-server/client/: CMakeLists.txt  build.sh
client-server/client/Release/: zmq_client
client-server/client/Source/: zmq_client.cpp
client-server/server/: CMakeLists.txt
client-server/server/Release/: zmq_server
client-server/server/Source/: zmq_server.cpp
scripts/: build.sh  run.sh
